K8s/client.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bmi-app-client
spec:
  selector:
    matchLabels:
      app: bmi-app-client
      tier: frontend
      track: stable
  replicas: 2
  template:
    metadata:
      labels:
        app: bmi-app-client
        tier: frontend
        track: stable
    spec:
      containers:
        - name: bmi-app-client
          image: "padmakumarnkg/bmi-app-client"
          ports:
            - name: http
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
    name: bmi-app-client-service
spec:
    type: ClusterIP
    selector:
        app: bmi-app-client
        tier: frontend
    ports:
        - protocol: TCP
          port: 3000
          targetPort: http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bmi-ingress-client
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: kubernetes.docker.internal    
    http:
      paths:
      - path: /ui/(.*)      
        backend:
          serviceName: bmi-app-client-service
          servicePort: 3000
