K8s/ingress-deployment.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bmi-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: kubernetes.docker.internal    
    http:
      paths:
      - path: /ui      
        backend:
          serviceName: bmi-app-client-service
          servicePort: 3000         
      - path: /api/(.*)      
        backend:
            serviceName: bmi-app-server-service
            servicePort: 5000
